force-app/main/default/objects/SWAT_Frameworks__c/SWAT_Frameworks__c.object-meta.xml
<CustomObject>
    <label>SWAT Framework</label>
    <nameField>
        <label>SWAT Framework Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SWAT Frameworks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>