force-app/main/default/objects/SWAT_Frameworks__c/fields/CAAAB_Stage__c.field-meta.xml
<CustomField>
    <fullName>CAAAB_Stage__c</fullName>
    <label>CAAAB Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gate 0 - Mandate</fullName>
            </value>
            <value>
                <fullName>Gate 1 - OBC</fullName>
            </value>
            <value>
                <fullName>Gate 2 - FBC</fullName>
            </value>
            <value>
                <fullName>Gate 3 - ITT Dispatch</fullName>
            </value>
            <value>
                <fullName>Gate 4 - Award</fullName>
            </value>
            <value>
                <fullName>Agreement Live</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>