force-app/main/default/objects/SWAT_Frameworks__c/fields/Existing_Framework__c.field-meta.xml
<CustomField>
    <fullName>Existing_Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>SWAT Frameworks (Existing Framework)</relationshipLabel>
    <relationshipName>SWAT_Frameworks1</relationshipName>
    <type>Lookup</type>
</CustomField>