force-app/main/default/objects/SWAT_Frameworks__c/fields/Existing_Framework_RM_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_Framework_RM_Number__c</fullName>
    <formula>IF( ISBLANK(Existing_Framework__c )=FALSE, Framework__r.RM_Number__c, &quot;TBC&quot;)</formula>
    <label>Existing Framework RM Number</label>
    <type>Text</type>
</CustomField>