force-app/main/default/objects/SWAT_Frameworks__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Future Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>SWAT Frameworks</relationshipLabel>
    <relationshipName>SWAT_Frameworks</relationshipName>
    <type>Lookup</type>
</CustomField>