force-app/main/default/objects/SWAT_Frameworks__c/fields/Framework_or_DPS__c.field-meta.xml
<CustomField>
    <fullName>Framework_or_DPS__c</fullName>
    <label>Framework or DPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Framework</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>