force-app/main/default/objects/SWAT_Frameworks__c/fields/New_Replacement__c.field-meta.xml
<CustomField>
    <fullName>New_Replacement__c</fullName>
    <label>New / Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>