force-app/main/default/objects/SWAT_Frameworks__c/fields/Next_CAAAB_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_CAAAB_Date__c</fullName>
    <label>Next CAAAB Date</label>
    <type>Date</type>
</CustomField>