force-app/main/default/objects/SWAT_Frameworks__c/fields/RM_Number__c.field-meta.xml
<CustomField>
    <fullName>RM_Number__c</fullName>
    <formula>IF( ISBLANK(Framework__c )=FALSE, Framework__r.RM_Number__c, &quot;TBC&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Framework RM Number</label>
    <type>Text</type>
</CustomField>