force-app/main/default/objects/SWAT_Frameworks__c/fields/SWAT_Team__c.field-meta.xml
<CustomField>
    <fullName>SWAT_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SWAT Team</label>
    <referenceTo>SWAT__c</referenceTo>
    <relationshipLabel>SWAT Frameworks</relationshipLabel>
    <relationshipName>SWAT_Frameworks</relationshipName>
    <type>Lookup</type>
</CustomField>