force-app/main/default/objects/SWAT_Frameworks__c/validationRules/Existing_Framework_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Existing_Framework_Mandatory</fullName>
    <active>true</active>
    <description>When replacement is selected, the existing framework is mandatory</description>
    <errorConditionFormula>AND(ISPICKVAL(New_Replacement__c, &quot;Replacement&quot;), ISBLANK(Existing_Framework__c))</errorConditionFormula>
    <errorDisplayField>Existing_Framework__c</errorDisplayField>
    <errorMessage>An existing framework is required when selecting replacement</errorMessage>
</ValidationRule>